# fast-api-crud

./: .gitignore  Dockerfile  Makefile  docker-compose-local.yml  docker-compose.yml  main.py  pyproject.toml
src/: controllers.py  main.py  routes.py
src/api/: routes.py
src/api/v1/: actors.py  films.py  smoke.py
src/config/: settings.py
src/db/: elastic.py
src/models/: actor_model.py  film_model.py
src/tests/: conftest.py  test_api.py
tests/: conftest.py  test_main.py
