[tool.poetry]
name = "fast-api-crud"
version = "0.1.0"
description = ""
authors = ["Yaroslav Limanskiy <yaroslav.limanskiy@pandadoc.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.0"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
pytest = "^6.2.5"
requests = "^2.26.0"
httpx = "^0.21.1"
trio = "^0.19.0"
black = "^21.11b1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
